--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,6 @@
 .header {
-  color: blue;
-  background-color: orange;
+  color: purple;
+  background-color: #f7ca18;
   text-align: center;
   font-weight: bold;
   height: 60px;
